[gd_scene load_steps=7 format=2]

[ext_resource path="res://motion_ai/common/tasking/TaskTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://motion_ai/common/tasking/actions/DropItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://motion_ai/common/tasking/actions/MoveToEntityRangeArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://motion_ai/common/tasking/actions/GrabItem.tscn" type="PackedScene" id=4]
[ext_resource path="res://motion_ai/common/tasking/actions/MoveToPosition.tscn" type="PackedScene" id=5]
[ext_resource path="res://motion_ai/common/tasking/MoveItemDrop.gd" type="Script" id=6]

[node name="MoveItemDrop" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="DropItemCautionary" parent="." index="0" instance=ExtResource( 2 )]

[node name="MoveToEntityRangeArea" parent="." index="1" instance=ExtResource( 3 )]
range_area = 2

[node name="GrabItem" parent="." index="2" instance=ExtResource( 4 )]

[node name="MoveToPosition" parent="." index="3" instance=ExtResource( 5 )]

[node name="DropItemFinal" parent="." index="4" instance=ExtResource( 2 )]
[connection signal="action_failure" from="DropItemCautionary" to="." method="_on_DropItemCautionary_action_failure"]
[connection signal="action_success" from="DropItemCautionary" to="." method="_on_DropItemCautionary_action_success"]
[connection signal="action_failure" from="MoveToEntityRangeArea" to="." method="_on_MoveToEntityRangeArea_action_failure"]
[connection signal="action_success" from="MoveToEntityRangeArea" to="." method="_on_MoveToEntityRangeArea_action_success"]
[connection signal="action_failure" from="GrabItem" to="." method="_on_GrabItem_action_failure"]
[connection signal="action_success" from="GrabItem" to="." method="_on_GrabItem_action_success"]
[connection signal="action_failure" from="MoveToPosition" to="." method="_on_MoveToPosition_action_failure"]
[connection signal="action_success" from="MoveToPosition" to="." method="_on_MoveToPosition_action_success"]
[connection signal="action_failure" from="DropItemFinal" to="." method="_on_DropItemFinal_action_failure"]
[connection signal="action_success" from="DropItemFinal" to="." method="_on_DropItemFinal_action_success"]
